# twinstat

./: CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg
docs/: conf.py  index.rst  modules.rst
docs/_build/doctrees/: environment.pickle  index.doctree  modules.doctree
docs/_build/doctrees/core/: core.doctree
docs/_build/doctrees/statespace_models/: statespace_models.doctree
docs/_build/doctrees/timeseries_forecast/: timeseries_forecast.doctree
docs/_build/html/: genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/timeseries_forecast/: timeseries_forecast.rst.txt
docs/_build/html/core/: core.html
docs/_build/html/statespace_models/: statespace_models.html
docs/_build/html/timeseries_forecast/: timeseries_forecast.html
docs/core/: core.rst
docs/statespace_models/: statespace_models.rst
hooks/: post_gen_project.py  pre_gen_project.py
tests/regression_tests/core/: core_test.py
tests/regression_tests/statespace_test/: kalman_test.py  particle_test.py  pytest.ini
tests/regression_tests/timeseries_test/: AR_ANN_test.py  parametric_test.py  test_weights.h5  test_weights.npz
tests/unit_tests/: test_check.py
twinstat/core/: AutoML.py  LinearRegression.py  knn_models.py  neural_network_base.py  optimization.py  sensitivity_analysis.py  statistical_tests.py  uncertainty_propagation.py  util.py
twinstat/statespace_models/: estimators.py
twinstat/timeseries_forecast/: AR_NN_models.py  GP_model.py  parametric.py
